--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 		   <!-- Navigation -->
 	    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	      <div class="container">
-	        <a class="navbar-brand" href="#">Select a Pokemon</a>
+	        <a class="navbar-brand" href="#">Pokemon Cards</a>
 	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 	          <span class="navbar-toggler-icon"></span>
 	        </button>
@@ -52,16 +52,20 @@
 					<div class="form-group">
 						<div class="row">
 							<div class="col-lg-6">
-							    <div class="input-group">							    
-							      <span class="input-group-btn">
-							        <button class="btn btn-secondary" type="submit" value="Submit" id="pokemonSelect">Select</button>
-							      </span>
-							      <input type="text" class="form-control" id="pokemonInput" ng-keyup="updateList()" ng-model='pokemonInput' placeholder="Enter a Pokemon" aria-label="Enter a Pokemon">
+								<div class="row" style="padding-top: 50px;">
+								    <div class="input-group">		    
+								     
+								      <input type="text" class="form-control" id="pokemonInput" ng-keyup="updateList()" ng-model='pokemonInput' placeholder="Enter a Pokemon" aria-label="Enter a Pokemon">
+								    </div>
+
+								</div>
+							    <div class="row" style="padding-top: 50px;">
+							    	<h3> Select your Card</h3>
 							    </div>
 							    <div class="row" style="padding-top: 50px;">
 							    	<ul>
 								    	<li ng-repeat="poki in pokemon  | orderBy: 'name'">
-									        <span class = "listItem" ng-click="changeURL(poki.imageUrl)">{{poki.name}}</span>
+									        <span class = "listItem" ng-click="changeURL(poki.imageUrlHiRes)">{{poki.name}}</span>
 									    </li>
 									</ul>
 									<!--<label for="pokemonSuggestions" >Suggestions:</label>
@@ -69,8 +73,8 @@
 								</div>
 							 </div>
 							 <div class="col-lg-6" >
-								<p>Selected Pokemon</p>							
-								<img id="pokemonImage" ng-src="{{imageURL}}" alt="Pokemon Image" height="200" width="200">
+								<p>Selected Card</p>							
+								<img id="pokemonImage" ng-src="{{imageURL}}" alt="Pokemon Image" height="400">
 							</div>
 						</div>
 							
