--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 								<div class="row" style="padding-top: 50px;">
 								    <div class="input-group">		    
 								     
-								      <input type="text" class="form-control" id="pokemonInput" ng-keyup="updateList()" ng-model='pokemonInput' placeholder="Enter a Pokemon" aria-label="Enter a Pokemon">
+								      <input type="text" class="form-control" id="pokemonInput" ng-keyup="updateList()" ng-model='pokemonInput' placeholder="Search for a Card" aria-label="Search for a Card">
 								    </div>
 
 								</div>
@@ -73,8 +73,8 @@
 								</div>
 							 </div>
 							 <div class="col-lg-6" >
-								<p>Selected Card</p>							
-								<img id="pokemonImage" ng-src="{{imageURL}}" alt="Pokemon Image" height="400">
+								<h3>Selected Card</h3>							
+								<img id="pokemonImage" ng-src="{{imageURL}}" alt="Selected Card Image" height="550">
 							</div>
 						</div>
 							
